--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "homepage": "https://Oen844.github.io/react-app-spa-heroes",
   "name": "heroes-spa",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "homepage": "https://Oen844.github.io/react-app-spa-heroes",
+  
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "npm run deploy"
+    "deploy": "npm run -d build"
   },
   "dependencies": {
     "query-string": "^7.1.1",
