--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "heroes-spa",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://Oen844.github.io/react-app-spa-heroes",
+  "homepage": "https://Oen844.github.io/react-app-spa-heroes/",
   
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "npm run -d build"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "query-string": "^7.1.1",
